# storm-codex

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE  README.fr.md  README.md  docker-compose.dev.yml  docker-compose.yml
.claude/: launch.json
.github/workflows/: publish.yml
crates/storm-codex-server/: .env.example  Cargo.toml  README.md  backfill_bench.py  test_jarvis.py  test_ws.py
crates/storm-codex-server/migrations/: 0001_init.sql  0002_uploads_match_link.sql  0003_app_settings.sql  0004_team_league.sql  0005_dim_talents_lookup.sql  0006_dim_patches.sql  0007_patch_hero_sections.sql  0008_draft.sql
crates/storm-codex-server/src/: admin.rs  azure.rs  config.rs  dim.rs  jarvis.rs  main.rs  manage.rs  project.rs  raw.rs  read.rs  upload.rs  ws.rs
crates/storm-codex-server/src/draft/: api.rs  formats.rs  mod.rs  store.rs
crates/storm-replay/: Cargo.toml  README.md
crates/storm-replay/protocols/: embed.rs  index.json
crates/storm-replay/protocols/tables/: 08bc2c97c138.json  289e07a9c73e.json  2c56814b752c.json  311fd6e76017.json  3e42260c7cd2.json  46bdc98aadd2.json  57527d5da039.json  59dd5fb101e7.json  5c5a42cf5398.json  7df4e86da007.json  81937818162c.json  a00c85782edb.json  a0a2b30e2034.json  a6232261c736.json  a82363138b61.json  a86584191ba7.json  ad5b3ca520ed.json  ae4e0a9cc4e0.json  b8a6e5823451.json  ca4a842f9f63.json  cfc606afb309.json  d00277c65982.json  d899da345d83.json  dc3bcef75f80.json  df2b90e5118b.json  e4a1ede6bfa2.json  eacc76b5848d.json  ef0e66f1f73d.json  f0ce17807369.json  f24012904932.json  f8877f1d06a1.json  f8cc86eda414.json
crates/storm-replay/src/: attributes.rs  bitpacked.rs  error.rs  lib.rs  protocol.rs  typeinfo.rs  value.rs  versioned.rs
crates/storm-replay/tests/: mini_corpus.rs
crates/storm-replay/tests/data/: 2024-10-07 22.29.55 Industrial District.StormReplay  2026-05-27 22.37.45 Industrial District.StormReplay  2026-06-09 20.35.02 Industrial District.StormReplay
crates/storm-stats/: Cargo.toml  README.md
crates/storm-stats/data/: attr.json  constants.json
crates/storm-stats/src/: constants.rs  convert.rs  lib.rs  process.rs
crates/storm-stats/tests/: extended_maps.rs
crates/storm-stats/tests/data/: silver-city-aram.StormReplay
docs/: 2026-06-19-draft-simulator-design.md  2026-06-19-draft-simulator-plan.md  STATUS.md  draft-aesthetics.html  draft-control-mockup.html  draft-mockup.html
docs/plans/: 2026-06-12-jalon0-spike-decode.md  2026-06-12-jalon1-storm-replay.md  2026-06-12-jalon2-storm-stats.md  2026-06-12-jalon3-serveur-db-backfill.md  2026-06-12-jalon4-front-parite.md  2026-06-12-jalon5-stream-jarvis.md  2026-06-16-storm-codex-suite-plan.md
docs/research/: 2026-06-12-jalon0-bench.md  2026-06-12-jalon2-parite.md  2026-06-12-jalon3-bench.md  2026-06-12-stats-of-the-storm-renovation.md
docs/runbooks/: 2026-06-12-bascule-decommission-node.md  2026-06-13-publication-crates.md  2026-06-13-reverse-proxy-et-ntfy.md
docs/specs/: 2026-06-12-storm-codex-design.md  2026-06-12-storm-codex-mockup.html  2026-06-13-scene-obs-entre-games-mockup.html  2026-06-16-storm-codex-suite-design.md
spike/: bench_python.py  crosscheck.py  export_protocols.py  sample_corpus.ps1  sample_stats_corpus.ps1
spike/bench-dotnet/: Program.cs  bench-dotnet.csproj
spike/storm-decode/: Cargo.toml
spike/storm-decode/src/: main.rs  protocol.rs  versioned.rs
spike/storm-decode/tests/: decode.rs
tools/: crosscheck_streams.py  protocol_gen.py
tools/parity-harness/: .t3-gamestats-only.txt  .t4-fields-only.txt  .t5-fields-only.txt  diff.py  dump.js  package-lock.json  package.json  tolerances.json
web/: index.html  package-lock.json  package.json  tsconfig.tsbuildinfo  vite.config.ts
web/src/: App.tsx  api.ts  main.tsx  theme.css  whatsnew.ts
web/src/components/: AggFilterBar.tsx  Avatar.tsx  Layout.tsx  LevelChart.tsx  Onboarding.tsx  OverlayFrame.tsx  SearchSelect.tsx  WhatsNew.tsx
web/src/pages/: Admin.tsx  Dashboard.tsx  Draft.tsx  DraftOverlay.tsx  Hero.tsx  HeroChanges.tsx  Heroes.tsx  Leagues.tsx  Maps.tsx  MatchDetail.tsx  (+11 more)
