[workspace]
resolver = "2"
members = ["crates/storm-replay"]
# Le spike du jalon 0 est figé (lockfile à lui) — il ne fait pas partie du workspace.
exclude = ["spike/storm-decode"]

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/matella/storm-codex"

[workspace.lints.clippy]
unwrap_used = "deny"
expect_used = "warn"
