[package]
name = "storm-codex-server"
version = "0.1.0"
description = "Serveur storm-codex : upload, parse, Postgres, WebSocket, REST (axum)"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
storm-replay = { path = "../storm-replay" }
storm-stats = { path = "../storm-stats" }
axum = { version = "0.8", features = ["ws", "macros"] }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8", features = ["runtime-tokio", "postgres", "json", "chrono", "migrate"] }
tower-http = { version = "0.6", features = ["trace", "cors", "fs"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
hex = "0.4"
rand = "0.8"
redis = { version = "0.27", features = ["tokio-comp"] }
uuid = { version = "1", features = ["v4"] }
ureq = { version = "3", features = ["json"] }
flate2 = "1"
tar = "0.4"

[lints]
workspace = true
