[package]
name = "storm-replay"
version = "0.1.0"
description = "Décodeur de replays Heroes of the Storm (.StormReplay) — MPQ + protocoles Blizzard"
keywords = ["heroes-of-the-storm", "replay", "parser", "blizzard"]
categories = ["parser-implementations", "games"]
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
nom-mpq = "2"
serde_json = "1"
thiserror = "2"
mimalloc = { version = "0.1", optional = true }

[features]
# Allocateur mimalloc pour les binaires (décodage = rafales de petites allocations ;
# le heap Windows par défaut coûte ~10-15 % du temps de décodage). Le serveur (jalon 3)
# l'activera aussi.
fast-alloc = ["dep:mimalloc"]

[dev-dependencies]
anyhow = "1"

[lints]
workspace = true
