[package]
name = "storm-stats"
version = "0.1.0"
description = "Stats de match Heroes of the Storm depuis un replay décodé — port de hots-parser"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
storm-replay = { path = "../storm-replay" }
serde_json = "1"
thiserror = "2"
regex = "1"
mimalloc = { version = "0.1", optional = true }

[features]
fast-alloc = ["dep:mimalloc"]

[dev-dependencies]
anyhow = "1"

[lints]
workspace = true
