[package]
name = "storm-stats"
version = "0.1.0"
description = "Stats de match Heroes of the Storm depuis un replay décodé — port de hots-parser"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
storm-replay = { path = "../storm-replay" }
# preserve_order : les objets JS sont ordonnés par insertion — le `for..in` sur clés
# non-numériques (nukes de Warhead Junction…) doit suivre cet ordre, pas l'ordre trié.
serde_json = { version = "1", features = ["preserve_order"] }
thiserror = "2"
regex = "1"
mimalloc = { version = "0.1", optional = true }

[features]
fast-alloc = ["dep:mimalloc"]

[dev-dependencies]
anyhow = "1"

[lints]
workspace = true
